--- a/football.yaml
+++ b/football.yaml
@@ -1,7 +1,6 @@
 # football.yaml
-path: videos/soccertrack/yolo_dataset
+path: videos/soccertrack/yolo_dataset_no_ball
 train: images/train
 val: images/val
-nc: 2
-names: ['player', 'ball']
-cls_weights: [1.0, 20.0]
+nc: 1
+names: ['player']
