Reestructured repo and updated README.

--- a/football.yaml
+++ b/football.yaml
@@ -2,5 +2,5 @@
 path: videos/soccertrack/yolo_dataset_no_ball
 train: images/train
 val: images/val
-nc: 1
-names: ['player']
+nc: 2
+names: ['player', 'ball']
